--- a/source/igd/src/Makefile.am
+++ b/source/igd/src/Makefile.am
@@ -22,7 +22,6 @@ AM_CFLAGS += -D_ANSC_LITTLE_ENDIAN_
 AM_CFLAGS += -D_LINUX -pipe
 AM_CFLAGS += -DPAL_ULOG
 AM_CFLAGS += -DCONFIG_VENDOR_MODEL
-AM_LDFLAGS = -lhal_platform
 
 AM_CPPFLAGS = -Wall -Wextra -Werror
 ACLOCAL_AMFLAGS = -I m4
@@ -38,7 +37,7 @@ IGD_CPPFLAGS = 	-I$(top_srcdir)/source/pal/upnp/include \
 
 IGD_SOURCES = igd_service_wan_ethlink_cfg.c igd_device_root.c igd_utility.c igd_device_lan.c igd_service_wan_commif_cfg.c igd_action_port_mapping.c igd_device_wan_connect.c igd_device_wan.c igd_platform_independent_inf.c igd_service_lanhostconfigmgmt.c igd_service_wan_connect.c igd_service_layer3_fwd.c
 
-IGD_LDFLAGS =  -lpthread -lz -lthreadutil -Bdynamic -lupnp -lhal_platform
+IGD_LDFLAGS =  -lpthread -lz -lthreadutil -Bdynamic -lupnp
 
 
 IGD_LDADD = $(top_builddir)/source/services/lib/libsrvmgr.la \
