--- a/source/service_multinet/Makefile.am
+++ b/source/service_multinet/Makefile.am
@@ -23,9 +23,9 @@ AM_CFLAGS = -fno-exceptions
 AM_CFLAGS = -Os
 AM_CFLAGS = -Wall -Wextra
 
-AM_LDFLAGS =  -lpthread -lz
+AM_LDFLAGS =  -lpthread -lz -lccsp_common $(DBUS_LIBS)
 
-service_multinet_exec_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util -I$(top_srcdir)/source/service_multinet/Puma6_plat -I$(top_srcdir)/source/include/service_multinet
+service_multinet_exec_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/source/include -I$(top_srcdir)/source/util -I$(top_srcdir)/source/service_multinet/Puma6_plat -I$(top_srcdir)/source/include/service_multinet $(DBUS_CFLAGS)
 service_multinet_exec_SOURCES = ep_access.c  ev_access.c  nv_access.c  service_multinet_handler.c  service_multinet_lib.c  service_multinet_main.c  service_multinet_swfab.c  service_multinet_swfab_deps.c  service_multinet_swfab_ep.c service_multinet_swfab_LinIF.c  util/service_multinet_util.c Puma6_plat/puma6_plat_map.c  Puma6_plat/puma6_plat_sw.c
 
 service_multinet_exec_LDADD = $(top_builddir)/source/util/libutopiautil.la \
